Fixed the issues after testing enrollment,attendence,anlytics modules